APIapp_ks8/apiapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiapp-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apiapp
  template:
    metadata:
      labels:
        app: apiapp
    spec:
      containers:
        - name: apiapp
          image: peterxn6/apiapp:1.0.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: apiapp-service
spec:
  selector:
    app: apiapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
