APIapp_ks8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress 
spec:
  rules:
    - host: api.pnilahernadez.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apiapp-service
                port:
                  number: 8080
